--- a/LogAnalyzer/.classpath
+++ b/LogAnalyzer/.classpath
@@ -1,175 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="conf/" kind="src" path="src"/>
-	<classpathentry kind="src" path="conf"/>
+	<classpathentry kind="src" path="src/main"/>
+	<classpathentry kind="src" path="logconf"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
-		<attributes>
-			<attribute name="owner.project.facets" value="java"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/com.genuitec.embedded.tomcat.runtime.v70">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/activation-1.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/antlr-2.7.7.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/antlr-runtime-3.2.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/aopalliance-1.0.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/apache-log4j-extras-1.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/apacheds-i18n-2.0.0-M15.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/apacheds-kerberos-codec-2.0.0-M15.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/api-asn1-api-1.0.0-M20.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/api-util-1.0.0-M20.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/asm-3.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/avro-1.7.4.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/cas-client-core-3.2.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/common-0.0.1-V100R002C50.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-beanutils-1.7.0.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-beanutils-core-1.8.0.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-cli-1.2.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-codec-1.9.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-collections-3.2.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-compress-1.4.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-configuration-1.6.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-daemon-1.0.13.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-digester-1.8.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-el-1.0.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-httpclient-3.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-io-2.4.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-lang-2.6.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-logging-1.2.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-math-2.2.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-math3-3.1.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-net-3.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/curator-client-2.7.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/curator-framework-2.7.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/curator-recipes-2.7.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/disruptor-3.3.0.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/dom4j-1.6.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/dynalogger-V100R002C00.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/ezmorph-1.0.6.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/findbugs-annotations-1.3.9-1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/flexjson-2.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/gson-2.2.4.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/guava-12.0.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/guice-3.0.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/guice-servlet-3.0.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hadoop-annotations-2.7.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hadoop-auth-2.7.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hadoop-client-2.7.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hadoop-common-2.7.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hadoop-hdfs-2.7.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hadoop-hdfs-client-2.7.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hadoop-hdfs-colocation-2.7.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hadoop-mapreduce-client-app-2.7.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hadoop-mapreduce-client-common-2.7.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hadoop-mapreduce-client-core-2.7.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hadoop-mapreduce-client-jobclient-2.7.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hadoop-mapreduce-client-shuffle-2.7.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hadoop-yarn-api-2.7.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hadoop-yarn-client-2.7.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hadoop-yarn-common-2.7.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hadoop-yarn-server-common-2.7.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hadoop-yarn-server-nodemanager-2.7.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hbase-annotations-1.0.0.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hbase-backup-1.0.0.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hbase-checkstyle-1.0.0.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hbase-client-1.0.0.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hbase-common-1.0.0.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hbase-examples-1.0.0.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hbase-hadoop-compat-1.0.0.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hbase-hadoop2-compat-1.0.0.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hbase-it-1.0.0.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hbase-it-bulk-load-1.0.0.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hbase-prefix-tree-1.0.0.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hbase-protocol-1.0.0.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hbase-rest-1.0.0.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hbase-secondaryindex-1.0.0.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hbase-server-1.0.0.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hbase-shell-1.0.0.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hbase-thrift-1.0.0.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hbaseFileStream-1.0.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/htrace-core-3.1.0-incubating.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/httpclient-4.3.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/httpcore-4.3.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/httpmime-4.3.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jackson-core-asl-1.9.13.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jackson-jaxrs-1.9.13.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jackson-mapper-asl-1.9.13.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jackson-xc-1.9.13.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jamon-runtime-2.3.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jasper-compiler-5.5.23.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jasper-runtime-5.5.23.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/java-xmlbuilder-0.4.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/javacc-5.0.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/javax.inject-1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jaxb-api-2.2.2.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jaxb-impl-2.2.3-1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jaxen-1.1.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jcip-annotations-1.0.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jcodings-1.0.8.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jersey-client-1.9.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jersey-core-1.9.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jersey-guice-1.9.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jersey-json-1.9.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jersey-server-1.9.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jets3t-0.9.0.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jettison-1.3.3.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jetty-6.1.26.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jetty-sslengine-6.1.26.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jetty-util-6.1.26.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/joni-2.1.2.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jruby-complete-1.6.8.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jsch-0.1.42.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/json-20090211.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/json-lib-2.4-jdk15.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/json-smart-1.1.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jsp-2.1-6.1.14.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jsp-api-2.1-6.1.14.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jsp-api-2.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jsr305-1.3.9.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/junit-4.11.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/leveldbjni-all-1.8.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/libthrift-0.9.0.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/log4j-1.2.17.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/metrics-core-2.2.0.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/monitorCollecter.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/morph-1.1.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/netty-3.2.4.Final.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/netty-all-4.0.23.Final.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/nimbus-jose-jwt-3.9.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/noggit-0.5.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/nutz-1.b.49.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/opensaml-1.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/paranamer-2.3.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/phoenix-core-4.4.0-HBase-1.0.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/protobuf-java-2.5.0.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/protostuff-api-1.0.7.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/protostuff-core-1.0.7.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/protostuff-parser-1.0.7.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/servlet-api-2.5-6.1.14.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/servlet-api-2.5.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/ShareNASFileSystem.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/slf4j-api-1.7.7.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/slf4j-log4j12-1.7.7.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/snappy-java-1.0.4.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/solr-core-4.9.0.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/solr-solrj-4.9.0.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/spnego-r7.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/spymemcached-2.11.6.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/SSO-2.7.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/stringtemplate-3.2.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/wc2frm-2.5.7.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/wstx-asl-3.2.7.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/xercesImpl-2.9.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/xml-apis-1.3.04.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/xmlenc-0.52.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/xmlsec-1.4.5.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/xom-1.2.8.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/xz-1.0.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/zookeeper-3.5.0.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
