--- a/LogAnalyzer/.project
+++ b/LogAnalyzer/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>LogAnalyzer_Old</name>
+	<name>LogAnalyzer</name>
 	<comment></comment>
 	<projects>
 	</projects>
