--- a/LogAnalyzer/.classpath
+++ b/LogAnalyzer/.classpath
@@ -9,6 +9,40 @@
 			<attribute name="owner.project.facets" value="jst.web"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-beanutils-1.7.0.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-beanutils-core-1.8.0.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-cli-1.2.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-codec-1.10.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-compress-1.4.1.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-configuration-1.6.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-lang-2.6.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-logging-1.1.3.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/gson-2.2.4.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/guava-12.0.1.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hadoop-auth-2.7.2.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hadoop-common-2.7.2.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hbase-client-1.0.2.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hbase-common-1.0.2.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hbase-protocol-1.0.2.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/htrace-core-3.1.0-incubating.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/httpclient-4.5.2.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/httpcore-4.4.4.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/httpmime-4.2.5.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/lucene-core-5.3.1.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/netty-3.7.0.Final.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/netty-all-4.0.23.Final.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/noggit-0.6.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/protobuf-java-2.5.0.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/servlet-api-2.5-6.1.14.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/slf4j-api-1.7.7.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/slf4j-log4j12-1.7.7.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/solr-core-5.3.1.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/solr-solrj-5.3.1.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/spnego-r7.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/zookeeper-3.5.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
